# PyThat

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
PyThat_nc_converter_tool/: Readme.md  cmd_tool.py
docs/source/: api_reference.rst  conf.py  index.rst  usage.rst
examples/: M486 Dispersion 40 mT.h5  example.py  floquet_just_spectrum_analyzer_large_incomplete.h5
src/PyThat/: __init__.py  h5to_nc.py
src/PyThat/BLS/: BLS_helpers.py  __init__.py
src/PyThat/helpers/: BLS.py  Explorer.py  ROI.py  dB.py  plotting.py
