[metadata]
name = PyThat
version = 0.2.1
author = Matthias Schweizer
author_email = mareschweizer@gmail.com
description = Read Thatec h5 formatting and convert it to netcdf files and xarray objects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrschweizer/PyThat
project_urls =
    Bug Tracker = https://github.com/mrschweizer/PyThat/issues
    Documentation = https://pythat.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    xarray
    numpy
    scipy
    h5py
    netcdf4
    h5netcdf
    matplotlib
    PyYAML
    dask
[options.packages.find]
where = src
